# geologyCC

./: CMakeCache.txt  CMakeLists.txt
cmake/: CMakeExternalLibs.cmake  DeployQt.cmake
libs/: CMakeLists.txt
libs/CCAppCommon/: CMakeLists.txt
libs/CCAppCommon/include/: CMakeLists.txt  ccApplicationBase.h  qHPR.h
libs/CCAppCommon/src/: CMakeLists.txt  ccApplicationBase.cpp  qHPR.cpp
libs/qCC_db/include/: ccColorScalesManager.h  ccColorTypes.h  ccGenericPointCloud.h  ccImage.h  ccIncludeGL.h  ccObject.h  ccPointCloud.h  ccViewportParameters.h
libs/qCC_db/src/: ccColorScalesManager.cpp  ccGenericPointCloud.cpp  ccHObjectCaster.cpp  ccMaterialSet.cpp  ccPointCloud.cpp  ccViewportParameters.cpp
libs/qCC_glWindow/include/: ccGLUtils.h  ccGLWindow.h
libs/qCC_glWindow/src/: ccGLUtils.cpp  ccGLWindow.cpp
libs/qCC_io/: CMakeLists.txt
libs/qCC_io/include/: DxfFilter.h
libs/qCC_io/src/: AsciiFilter.cpp  DxfFilter.cpp
libs/qHPR/: CMakeLists.txt
libs/qHPR/include/: CMakeLists.txt  qHPR.h
libs/qHPR/src/: qHPR.cpp
plugins/core/IO/qE57IO/: CMakeLists.txt
plugins/core/Standard/: CMakeLists.txt
plugins/core/Standard/qColorimetricSegmenter/: .gitignore  .mailmap  CMakeLists.txt  HSV.h  HSVDialog.cpp  HSVDialog.h  HSVDialog.ui  KmeansDlg.cpp  KmeansDlg.h  KmeansDlg.ui  QuantiDialog.cpp  QuantiDialog.h  QuantiDialog.ui  README.md  RgbDialog.cpp  RgbDialog.h  RgbDialog.ui  ScalarDialog.cpp  ScalarDialog.h  ScalarDialog.ui  info.json  qColorimetricSegmenter.cpp  qColorimetricSegmenter.h  qColorimetricSegmenter.qrc
plugins/core/Standard/qColorimetricSegmenter/doc/brief/: brief.tex
plugins/core/Standard/qColorimetricSegmenter/doc/cahier_des_charges/: cdc.tex
plugins/core/Standard/qColorimetricSegmenter/doc/cahier_des_charges/diagrammes/: modele_domaine.pu  use_cases.pu
plugins/core/Standard/qColorimetricSegmenter/doc/cahier_des_charges/gantt_project/: Sprint1.gan  ptrans.gan
plugins/core/Standard/qColorimetricSegmenter/doc/diagrammes/: classes.pu
plugins/core/Standard/qColorimetricSegmenter/doc/rapport_description/: Rapport_description_systeme_alpha.tex  Rapport_description_systeme_beta.tex  Rapport_description_systeme_final.tex
plugins/core/Standard/qColorimetricSegmenter/doc/rapports_hebdomadaires/: Rapport10_23-12_29-12.tex  Rapport11_30-12_05-01.tex  Rapport12_06-01_12-01.tex  Rapport13_13-01_19-01.tex  Rapport14_20-01_26-01.tex  Rapport15_27-01_02-02.tex  Rapport16_03-02_09-02.tex  Rapport17_10-02_16-02.tex  Rapport18_17-02_23-02.tex  Rapport19_24-02_01-03.tex  Rapport1_21-10_27-10.tex  Rapport20_02-03_08-03.tex  Rapport21_09-03_15-03.tex  Rapport22_16-03_22-03.tex  Rapport23_23-03_29-03.tex  Rapport24_30-03_05-04.tex  Rapport25_06-04_12-04.tex  Rapport26_13-04_19-04.tex  Rapport27_20-04_26-04.tex  Rapport28_27-04_03-05.tex  Rapport29_04-05_10-05.tex  Rapport2_28-10_03-11.tex  Rapport30_11-05_17-05.tex  Rapport3_04-11_10-11.tex  Rapport4_11-11_17-11.tex  Rapport5_18-11_24-11.tex  Rapport6_25-11_01-12.tex  Rapport7_02-12_08-12.tex  Rapport8_09-12_15-12.tex  Rapport9_16-12_22-12.tex
plugins/core/Standard/qColorimetricSegmenter/doc/rapports_iterations/iteration_1/: Rapport_iteration_1.tex
plugins/core/Standard/qColorimetricSegmenter/doc/rapports_iterations/iteration_1/gantt_project/: Sprint2.gan
plugins/core/Standard/qColorimetricSegmenter/doc/rapports_iterations/iteration_2/: Rapport_sprint_review.tex
plugins/core/Standard/qColorimetricSegmenter/doc/rapports_iterations/iteration_3/: Rapport_iteration_3.tex
plugins/core/Standard/qColorimetricSegmenter/doc/rapports_iterations/iteration_3/gantt_project/: Sprint4.gan
plugins/core/Standard/qColorimetricSegmenter/doc/rapports_iterations/iteration_4/: Rapport_iteration_4.tex
plugins/core/Standard/qColorimetricSegmenter/doc/rapports_iterations/iteration_5/: Rapport_iteration_5.tex
plugins/core/Standard/qColorimetricSegmenter/doc/rapports_iterations/iteration_6/: Rapport_iteration_6.tex
plugins/core/Standard/qDxfwr/: CMakeLists.txt
plugins/core/Standard/qDxfwr/include/: CMakeLists.txt  dxfwr.h
plugins/core/Standard/qDxfwr/src/: CMakeLists.txt  dxfwr.cpp
plugins/core/Standard/qJSonRPCPlugin/: CMakeLists.txt  README.md  info.json  qJSonRPCPlugin.qrc
plugins/core/Standard/qJSonRPCPlugin/include/: CMakeLists.txt  JsonRPCPlugin.h  jsonrpcserver.h
plugins/core/Standard/qJSonRPCPlugin/src/: CMakeLists.txt  JsonRPCPlugin.cpp  jsonrpcserver.cpp
plugins/core/Standard/qJSonRPCPlugin/test/: client_clear.py  client_open.py  client_open2.py  client_open_matrix.py
plugins/core/Standard/qLibpointmatcher/: CMakeLists.txt  info.json  qLibpointmatcher.qrc
plugins/core/Standard/qLibpointmatcher/include/: CMakeLists.txt  Libpointmatcher.h  LibpointmatcherConvergenceDialog.h  LibpointmatcherDialog.h  LibpointmatcherDisclaimerDialog.h  LibpointmatcherOutlierDialog.h  LibpointmatcherProcess.h  LibpointmatcherTools.h
plugins/core/Standard/qLibpointmatcher/src/: CMakeLists.txt  Libpointmatcher.cpp  LibpointmatcherConvergenceDialog.cpp  LibpointmatcherDialog.cpp  LibpointmatcherDisclaimerDialog.cpp  LibpointmatcherOutlierDialog.cpp  LibpointmatcherProcess.cpp  LibpointmatcherTools.cpp
plugins/core/Standard/qLibpointmatcher/ui/: CMakeLists.txt  LibpointmatcherConvergenceDialog.ui  LibpointmatcherDialog.ui  LibpointmatcherOutlierDialog.ui  LibpointmatcherOutlierDialog.ui.autosave  disclaimerDlg.ui
qCC/: CMakeLists.txt  ccApplication.cpp  ccConsole.cpp  ccGraphicalSegmentationTool.cpp  ccGraphicalSegmentationTool.h  ccImageDrawer.cpp  ccImageDrawer.h  ccImageViewer.cpp  ccImageViewer.h  ccPointPropertiesDlg.cpp  ccPointPropertiesDlg.h  ccStichedImageViewer.cpp  ccStichedImageViewer.h  ccUnrollCleanDlg.cpp  ccUnrollCleanDlg.h  ccUnrollDlg.cpp  icons.qrc  main.cpp  main.h  mainwindow.cpp  mainwindow.h
qCC/db_tree/: ccDBRoot.cpp  ccDBRoot.h  ccPropertiesTreeDelegate.cpp  ccPropertiesTreeDelegate.h
qCC/pluginManager/: ccPluginUIManager.cpp
qCC/qdarkstyle/dark/: style.qss
qCC/ui_templates/: mainWindow.ui  pointPropertiesDlg.ui  stichedImageViewerDlg.ui  subsamplingMatcher.ui  unrollCleanDlg.ui
(+2 files in other folders)
